--- a/style.css
+++ b/style.css
@@ -26,5 +26,11 @@ h1{
  }
  nav a { 
     text-decoration: none;
-    
+    color: var(--bg-color); 
+    margin:0rem 2rem 3rem 0rem;
+    font: size 12rem;
  }
+nav a:hover{
+    text-decoration: underline ;
+    transform: scale( ) ;
+} 
