--- a/style.css
+++ b/style.css
@@ -32,5 +32,6 @@ h1{
  }
 nav a:hover{
     text-decoration: underline ;
-    transform: scale( ) ;
+    transform: scale( 0.90) ;
+    transition: ;
 } 
