--- a/style.css
+++ b/style.css
@@ -33,5 +33,5 @@ h1{
 nav a:hover{
     text-decoration: underline ;
     transform: scale( 0.90) ;
-    transition: ;
+    transition: transforme 0.1s;
 } 
