--- a/style.css
+++ b/style.css
@@ -1,37 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 :root {
-    --bg-color: #03001C;
-    --primary-color: #5B8FB9;
-    --secondary-color: #B6EADA;
---font:"--font:"Nunito Sans" ,sans-serif;
+    --bg-color:#021526;
+--primary-color: #6EACDA;
+--secundary-color: #E2E2B6;
+--font: "Nunito Sans", sans-serif;
 }
-body { background-color: var(--bg-color);
-    color:var(--secondary-color);
-    font-family:var(--font);
-    height:100vh;
-    margin:0;
+body{    background-color: var(--bg-color);
+    color: var(--primary-color);
+    font-family: var(--font);
+    height: 100vh;
+    margin: 0;
 }
-header{ background-color: var(--primary-color);
-text-align: center;
+header { background-color: var(--primary-color);
+    text-align: center;
+    padding: 1px;
 }
 h1{
-    font-size: 2rem;
-  color: var(--bg-color)
-  font-weight: 700px;
-}
- nav{
-    display: flex;
-    justify-content: center;
-    font-weight: 400;
- }
- nav a { 
-    text-decoration: none;
-    color: var(--bg-color); 
-    margin:0rem 2rem 3rem 0rem;
-    font: size 12rem;
- }
+    font-size: 6rem;
+    color: var(--bg-color);
+    font-weight: 700;
+    }
+    nav{
+        display: flex;
+        justify-content: center;
+        font-weight: 400;
+    }
+    nav a {
+        text-decoration: none;
+        color: var(--bg-color);
+        margin: 0rem 2rem 3rem 0rem;
+        font-size: 5rem;
+    }
 nav a:hover{
-    text-decoration: underline ;
-    transform: scale( 0.90) ;
-    transition: transforme 0.1s;
-} 
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
+}
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
+    color: var(--bg-color);
+    width: 100%;
+    height: 3rem;
+    margin-top: 2rem;
+    }
