--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 :root {
-    --bg-color:#000000;
+    --bg-color:#00ffff;
 --primary-color: #ff0000;
 --secundary-color: #ffffff;
 --font: "Nunito Sans", sans-serif;
